--- a/source/javascripts/settings.js.erb
+++ b/source/javascripts/settings.js.erb
@@ -1,15 +1,25 @@
 var MEME_SETTINGS = {
-  creditText: 'Source:', // Default "credits" text.
+  creditText: '', // Default "credits" text.
   creditSize: 12, // Font size for credit text.
   downloadName: 'share', // The name of the downloaded image file (will have a ".png" extension added).
   fontColor: 'white', // Universal font color.
 
   // Universal font family for texts:
   // Note that you'll need to included quoted font names as you would in CSS, ie: '"Knockout 28 B"'.
-  fontFamily: 'Helvetica Neue',
+  fontFamily: 'RonniaCondensed-Bold',
   // Font family options: set to empty array to disable font selector.
   // These options may also be formatted as {text:'Knockout', value:'"Knockout 28 B"'}.
-  fontFamilyOpts: ['Arial', 'Helvetica Neue', 'Comic Sans MS'],
+  fontFamilyOpts: [
+    { text: 'Ronnia Condensed Bold', value: 'RonniaCondensed-Bold' },
+    { text: 'Ronnia Condensed Light', value: 'RonniaCondensed-Light' },
+    { text: 'Etica Light', value: 'LFTEtica-Light' },
+    { text: 'Etica Semibold', value: 'LFTEtica-Semibold' },
+    { text: 'Etica Light Italic', value: 'LFTEtica-LightItalic' },
+    'Impact',
+    'Arial', 
+    'Helvetica Neue', 
+    'Comic Sans MS', 
+  ],
   
   // Font size of main headline:
   fontSize: 24,
@@ -22,14 +32,40 @@ var MEME_SETTINGS = {
 
   headlineText: 'Write your own headline', // Default headline text.
   height: 378, // Canvas rendering height.
+  width: 755, // Canvas rendering width.
   imageScale: 1, // Background image scale.
-  imageSrc: '', // Default background image path. MUST reside on host domain, or use base64 data.
+  imageSrc: 'images/default.jpg', // Default background image path. MUST reside on host domain, or use base64 data.
   overlayAlpha: 0.5, // Opacity of image overlay.
 
   // Image overlay color, or blank ('') for no overlay:
-  overlayColor: '#000',
+  overlayColor: '',
   // Overlay color options: set to empty array to disable overlay options selector.
-  overlayColorOpts: ['#000', '#777', '#2980b9'],
+  overlayColorOpts: [
+    '#FF9C42', // Neon Carrot
+    '#FFB570', // Macaroni & Cheese
+    '#FF8B1F', // West Side
+    '#0A92B2', // Bondi blue
+    '#0CAFD4', // Cerulean
+    '#087087', // Atoll
+    '#FFFFFF', // White
+    '#F4F4F6', // Lightgrey
+    '#C8C9D0', // Silver
+    '#9D9EAA', // Medium grey
+    '#727483', // Dark grey
+    '#4C4D57', // Charcoal
+    '#33343B', // Tuna
+    '#e52d27', // Red
+    '#6cbe58', // Green
+    '#306199', // Facebook
+    '#26c4f1', // Twitter
+    '#517fa4', // Instagram
+    '#ffde42', // Yellow
+    '#87087d', // Purple
+    '#ffd265', // 2 guys 1 car
+    '#ce4d45', // Readers Rides
+    '#0b7b83', // Reviews
+    '#79d2a4' // Car Trivia
+  ],
   paddingRatio: 0.05, // Percentage of canvas width to use as edge padding.
   
   // Text alignment: valid settings are "left", "center", and "right".
@@ -47,16 +83,15 @@ var MEME_SETTINGS = {
   watermarkMaxWidthRatio: 0.25, // Maximum allowed width of watermark (percentage of total canvas width).
 
   // Path to the watermark image source, or blank for no watermark:
-  // Alternatively, use '<%= asset_data_uri("vox.png") %>' to populate the watermark with base64 data, avoiding Cross-Origin issues.
-  watermarkSrc: (localStorage && localStorage.getItem('meme_watermark')) || '<%= image_path("vox.png") %>',
+  // Alternatively, use '<%= asset_data_uri("gate_white.png") %>' to populate the watermark with base64 data, avoiding Cross-Origin issues.
+  watermarkSrc: (localStorage && localStorage.getItem('meme_watermark')) || '<%= image_path("gate_white.png") %>',
   
   // Watermark image options: set to empty array to disable watermark picker.
   // NOTE: only populate the "data" attributes with base64 data when concerned about Cross-Origin requests...
   // Otherwise, just leave "data" attributes blank and allow images to load from your server.
   watermarkOpts: [
-    {text: 'Vox', value: '<%= image_path("vox.png") %>', data: '<%= asset_data_uri("vox.png") %>'},
-    {text: 'The Verge', value: '<%= image_path("theverge.png") %>', data: ''}
-  ],
-
-  width: 755 // Canvas rendering width.
+    {text: 'White gate', value: '<%= image_path("gate_white.png") %>', data: ''},
+    {text: 'Orange gate', value: '<%= image_path("gate_orange.png") %>', data: ''},
+    {text: 'Logo', value: '<%= image_path("logo_white-orange.png") %>', data: ''}
+  ]
 };
