--- a/source/partials/_head.html.erb
+++ b/source/partials/_head.html.erb
@@ -3,5 +3,6 @@
 <!-- Always force latest IE rendering engine or request Chrome Frame -->
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 <title><%= current_page.data.title %></title>
+<link rel="stylesheet" href="http://vtec.carthrottle.com/workspace/assets/dist/1413219217/ct.fonts.min.css">
 <%= stylesheet_link_tag "main", {media: false} %>
 <meta name="description" content="<%= current_page.data.description %>" />
