--- a/source/javascripts/settings.js.erb
+++ b/source/javascripts/settings.js.erb
@@ -6,21 +6,17 @@ var MEME_SETTINGS = {
 
   // Universal font family for texts:
   // Note that you'll need to included quoted font names as you would in CSS, ie: '"Knockout 28 B"'.
-  fontFamily: 'RonniaCondensed-Bold',
+  fontFamily: 'LFTEtica-Light',
   // Font family options: set to empty array to disable font selector.
   // These options may also be formatted as {text:'Knockout', value:'"Knockout 28 B"'}.
   fontFamilyOpts: [
-    { text: 'Ronnia Condensed Bold', value: 'RonniaCondensed-Bold' },
-    { text: 'Ronnia Condensed Light', value: 'RonniaCondensed-Light' },
     { text: 'Etica Light', value: 'LFTEtica-Light' },
     { text: 'Etica Semibold', value: 'LFTEtica-Semibold' },
-    { text: 'Etica Light Italic', value: 'LFTEtica-LightItalic' },
     'Impact',
-    'Arial', 
-    'Helvetica Neue', 
-    'Comic Sans MS', 
+    'Helvetica Neue',
+    'Comic Sans MS',
   ],
-  
+
   // Font size of main headline:
   fontSize: 24,
   // Font size options: set to empty array to disable font-size selector.
@@ -67,12 +63,12 @@ var MEME_SETTINGS = {
     '#79d2a4' // Car Trivia
   ],
   paddingRatio: 0.05, // Percentage of canvas width to use as edge padding.
-  
+
   // Text alignment: valid settings are "left", "center", and "right".
   textAlign: 'left',
   // Text alignment options: set to empty array to disable alignment picker.
   textAlignOpts: [
-    {text: 'Align left', value: 'left'}, 
+    {text: 'Align left', value: 'left'},
     {text: 'Align center', value: 'center'},
     {text: 'Align right', value: 'right'}
   ],
@@ -85,7 +81,7 @@ var MEME_SETTINGS = {
   // Path to the watermark image source, or blank for no watermark:
   // Alternatively, use '<%= asset_data_uri("gate_white.png") %>' to populate the watermark with base64 data, avoiding Cross-Origin issues.
   watermarkSrc: (localStorage && localStorage.getItem('meme_watermark')) || '<%= image_path("gate_white.png") %>',
-  
+
   // Watermark image options: set to empty array to disable watermark picker.
   // NOTE: only populate the "data" attributes with base64 data when concerned about Cross-Origin requests...
   // Otherwise, just leave "data" attributes blank and allow images to load from your server.
