--- a/source/partials/_head.html.erb
+++ b/source/partials/_head.html.erb
@@ -3,6 +3,6 @@
 <!-- Always force latest IE rendering engine or request Chrome Frame -->
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 <title><%= current_page.data.title %></title>
-<link rel="stylesheet" href="http://vtec.carthrottle.com/workspace/assets/dist/1413219217/ct.fonts.min.css">
+<link rel="stylesheet" href="https://d1hg5p9jl2wlvc.cloudfront.net/assets/bundle/fonts.min-89204464.css">
 <%= stylesheet_link_tag "main", {media: false} %>
 <meta name="description" content="<%= current_page.data.description %>" />
